# Cardano-Timeseries-IO

./: .gitignore  README.md  TODO.md  cabal.project  timeseries-io.cabal  typing.txt
app/: Common.hs  File.hs  Main.hs  REPL.hs
bench/: Bench.hs
docs/: elab.txt  sre-expressions.txt  typing.txt
query/: query1.txt  query10.txt
src/Cardano/Timeseries/: AsText.hs  Elab.hs  Interp.hs  Query.hs  Resolve.hs  Store.hs  Typing.hs  Unify.hs
src/Cardano/Timeseries/Data/: Pair.hs  SnocList.hs  Triple.hs
src/Cardano/Timeseries/Domain/: Identifier.hs  Instant.hs  Timeseries.hs  Types.hs
src/Cardano/Timeseries/Import/: PlainCBOR.hs
src/Cardano/Timeseries/Interp/: Expect.hs  Statistics.hs  Types.hs  Value.hs
src/Cardano/Timeseries/Query/: BinaryArithmeticOp.hs  BinaryRelation.hs  Expr.hs  Parser.hs  Types.hs  Value.hs
src/Cardano/Timeseries/Query/Expr/: Parser.hs
src/Cardano/Timeseries/Query/Surface/: Elab.hs  Expr.hs  Head.hs  Parser.hs  Resolve.hs  Ty.hs  Types.hs  Unify.hs
src/Cardano/Timeseries/Store/: Flat.hs  Tree.hs
src/Cardano/Timeseries/Store/Flat/: Parser.hs
src/Cardano/Timeseries/Surface/: Elab.hs  Expr.hs  Unify.hs
src/Cardano/Timeseries/Surface/Expr/: Head.hs  Parser.hs
