cabal-version:      3.0
name:               timeseries-io
version:            0.1.0.0
author:             Russoul
maintainer:         ruslan.feizerakhmanov@iohk.io
build-type:         Simple
extra-doc-files:    CHANGELOG.md

flag profiling
  description:          Enable profiling
  default:              False
  manual:               True

common common
    ghc-options:
      -Wall

      -- to ease development only
      -Wno-unused-matches
      -Wno-unused-top-binds
      -Wno-unused-local-binds
      -Wno-unused-imports

      -fno-prof-auto

    default-language: GHC2021

    default-extensions:
      LambdaCase
      NamedFieldPuns
      OverloadedStrings
      Strict

library
    import: common
    hs-source-dirs: src

    build-depends:
      base,
      attoparsec,
      megaparsec,
      scientific,
      vector,
      text,
      serialise,
      statistics,
      time,
      containers,
      mtl,
      trace-resources,
      deepseq

    exposed-modules:
      Cardano.Timeseries.Data.Pair,
      Cardano.Timeseries.Data.SnocList,
      Cardano.Timeseries.Data.Triple,
      Cardano.Timeseries.Domain.Identifier,
      Cardano.Timeseries.Domain.Instant,
      Cardano.Timeseries.Domain.Interval,
      Cardano.Timeseries.Domain.Timeseries,
      Cardano.Timeseries.Domain.Types,
      Cardano.Timeseries.Import.PlainCBOR,
      Cardano.Timeseries.Interp,
      Cardano.Timeseries.Interp.Config,
      Cardano.Timeseries.Interp.Expect,
      Cardano.Timeseries.Interp.Statistics,
      Cardano.Timeseries.Interp.Types,
      Cardano.Timeseries.Interp.Value,
      Cardano.Timeseries.Query.BinaryArithmeticOp,
      Cardano.Timeseries.Query.BinaryRelation,
      Cardano.Timeseries.Query.Expr,
      Cardano.Timeseries.Resolve,
      Cardano.Timeseries.Store,
      Cardano.Timeseries.Store.Flat,
      Cardano.Timeseries.Store.Flat.Parser,
      Cardano.Timeseries.Store.Tree,
      Cardano.Timeseries.Elab,
      Cardano.Timeseries.Surface.Expr,
      Cardano.Timeseries.Surface.Expr.Head,
      Cardano.Timeseries.Surface.Expr.Parser,
      Cardano.Timeseries.Typing,
      Cardano.Timeseries.Unify,
      Cardano.Timeseries.Util

    -- if flag(profiling)
    --   ghc-options: -fprof-auto

executable timeseries-io
    -- Import common source files and warning flags.
    import: common
    ghc-options: -rtsopts
    hs-source-dirs: app
    main-is: Main.hs

    build-depends:
      base,
      attoparsec,
      megaparsec,
      vector,
      text,
      serialise,
      statistics,
      time,
      containers,
      mtl,
      trace-resources,
      timeseries-io,
      deepseq

    -- if flag(profiling)
    --   ghc-options: -fprof-auto -rtsopts "-with-rtsopts=-T"

benchmark timeseries-io-bench
    import: common
    type: exitcode-stdio-1.0
    hs-source-dirs: bench
    main-is: Bench.hs

    build-depends:
      base,
      attoparsec,
      vector,
      text,
      serialise,
      statistics,
      time,
      containers,
      mtl,
      trace-resources,
      timeseries-io,
      criterion
