cabal-version:      3.4
name:               timeseries-io
version:            0.1.0.0
author:             Russoul
maintainer:         ruslan.feizerakhmanov@iohk.io
build-type:         Simple
extra-doc-files:    CHANGELOG.md

flag profiling
  description:          Enable profiling
  default:              False
  manual:               True

common common
    ghc-options:
      -Wall

      -- to ease development only
      -- -Wno-unused-matches
      -- -Wno-unused-top-binds
      -- -Wno-unused-local-binds
      -- -Wno-unused-imports

    if impl(ghc >= 9.8)
      ghc-options:
        -Wno-x-partial

    if flag(profiling)
      ghc-options:
        -fno-prof-auto

    default-language: Haskell2010

    default-extensions:
      LambdaCase
      NamedFieldPuns
      OverloadedStrings

      -- NB.: This package is strict Haskell!
      Strict

library
    import: common
    hs-source-dirs: src

    build-depends:
      base,
      megaparsec,
      scientific,
      vector,
      text,
      serialise,
      statistics,
      time,
      containers,
      mtl,
      trace-resources,
      deepseq

    exposed-modules:
      Cardano.Timeseries.AsText,
      Cardano.Timeseries.Domain.Identifier,
      Cardano.Timeseries.Domain.Instant,
      Cardano.Timeseries.Domain.Interval,
      Cardano.Timeseries.Domain.Timeseries,
      Cardano.Timeseries.Domain.Types,
      Cardano.Timeseries.Import.PlainCBOR,
      Cardano.Timeseries.Interp,
      Cardano.Timeseries.Interp.Config,
      Cardano.Timeseries.Interp.Expect,
      Cardano.Timeseries.Interp.Statistics,
      Cardano.Timeseries.Interp.Types,
      Cardano.Timeseries.Interp.Value,
      Cardano.Timeseries.Query.BinaryArithmeticOp,
      Cardano.Timeseries.Query.BinaryRelation,
      Cardano.Timeseries.Query.Expr,
      Cardano.Timeseries.Resolve,
      Cardano.Timeseries.Store,
      Cardano.Timeseries.Store.Flat,
      Cardano.Timeseries.Store.Flat.Parser,
      Cardano.Timeseries.Store.Tree,
      Cardano.Timeseries.Elab,
      Cardano.Timeseries.Surface.Expr,
      Cardano.Timeseries.Surface.Expr.Head,
      Cardano.Timeseries.Surface.Expr.Parser,
      Cardano.Timeseries.Typing,
      Cardano.Timeseries.Unify,
      Cardano.Timeseries.Util

executable timeseries-io-repl
    -- Import common source files and warning flags.
    import: common
    ghc-options: -rtsopts
    hs-source-dirs: app
    main-is: REPL.hs

    other-modules:
      Common

    build-depends:
      base,
      megaparsec,
      vector,
      text,
      serialise,
      statistics,
      time,
      containers,
      mtl,
      trace-resources,
      timeseries-io,
      filepath,
      deepseq

executable timeseries-io-file
    -- Import common source files and warning flags.
    import: common
    ghc-options: -rtsopts
    hs-source-dirs: app
    main-is: File.hs

    other-modules:
      Common

    build-depends:
      base,
      timeseries-io,
      megaparsec,
      vector,
      text,
      serialise,
      statistics,
      time,
      containers,
      mtl,
      trace-resources,
      filepath,
      deepseq

benchmark timeseries-io-bench
    import: common
    type: exitcode-stdio-1.0
    hs-source-dirs: bench
    main-is: Bench.hs

    build-depends:
      base,
      vector,
      text,
      serialise,
      megaparsec,
      statistics,
      time,
      containers,
      mtl,
      trace-dispatcher,
      trace-resources,
      timeseries-io,
      criterion
